# termusic

./: Cargo.toml
playback/: Cargo.toml
playback/src/: lib.rs
player/: Cargo.toml  build.rs
player/proto/: player_service.proto
player/src/: lib.rs  player.rs  playlist.rs  tracklist.rs
player/src/audio_backend/: mod.rs  rodio.rs
server/: Cargo.toml
server/src/: music_player_service.rs  server.rs
tui/: Cargo.toml
tui/src/ui/: mod.rs  playback.rs
tui/src/ui/components/: lyric.rs  playlist.rs
tui/src/ui/components/config_editor/: update.rs
tui/src/ui/model/: mod.rs  update.rs
