[package]
name = "termusic-player"
description = "player library to support termusic." 
version.workspace = true 
authors.workspace = true 
edition.workspace = true
license.workspace = true 
repository.workspace = true 
homepage.workspace = true 
keywords.workspace = true 
categories.workspace = true 


[lib]
name = "termusicplayer"
path = "src/lib.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true # {path = "../lib/"}
termusic-audio.workspace = true # {path = "../lib/"}
anyhow.workspace = true 
# discord-rich-presence.workspace = true
# glib = { version="0.17", optional = true }
# gstreamer = { version="0.20", optional = true}
# libmpv-sys  = { version = "3", optional = true }
# lovely_env_logger.workspace = true # = "0.6"
pathdiff.workspace = true #  = { version = "0.2", features = ["camino"] }
# reqwest.workspace = true
serde.workspace = true
# souvlaki.workspace = true
# tonic.workspace = true
# prost.workspace = true

cpal.workspace = true
futures-util.workspace  = true
lazy_static.workspace  = true
librespot-protocol.workspace  = true
log.workspace  = true
parking_lot.workspace  = true
rand.workspace  = true
rand_distr.workspace  = true
rb.workspace  = true
rodio.workspace   = true
symphonia.workspace  = true
thiserror.workspace  = true
tokio.workspace  = true
zerocopy.workspace  = true
owo-colors.workspace  = true
async-trait.workspace  = true
url.workspace  = true
tonic.workspace = true
prost.workspace = true

[features]
default = []
# left for debug
# default = ["mpv"]
# default = ["gst"]
# cover = []
# gst = ["gstreamer","glib"]
# mpv = ["libmpv-sys"]


[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
tonic-build.workspace = true